--- a/Code_project.qmd
+++ b/Code_project.qmd
@@ -24,8 +24,6 @@ library(readxl)
 library(readr)
 ```
 
-# Formating and cleanning of the CNC database
-
 <center>
 
 # A presentation of the project
@@ -97,36 +95,29 @@ The CNC's data was less memory-consuming. However their format was not convenien
 
 #### Formating and cleaning of the CNC database
 
-```{r Cleaning_CNC_database, message = FALSE}
-
+```{r Cleaning_ormating_unction, message = FALSE}
 file_path <- "exploitation_données_par_département.xlsx"
 
-cnc_data <- read_excel(file_path, sheet = 4, skip = 5)
+# Function to read and process a sheet
+read_and_process_sheet <- function(sheet_index) {
+  cnc_data <- read_excel(file_path, sheet = sheet_index, skip = 5) |>
+    select(-2) |>
+    rename(departement_code = 1) |>
+    pivot_longer(cols = -departement_code, 
+                 names_to = "year", 
+                 values_to = excel_sheets(file_path)[sheet_index])
+  
+  return(cnc_data)
+}
+```
 
-cnc_data_long <-  cnc_data |>
-  select(-colnames(cnc_data)[2]) |>
-  rename(departement_code = colnames(cnc_data)[1]) |>
-  pivot_longer(
-    cols = -departement_code,
-    names_to = "year", 
-    values_to = excel_sheets(file_path)[4]
-    )
+```{r Cleaning_CNC_database, message = FALSE}
 
-cnc_data_merge <- cnc_data_long
+cnc_data_merge <- read_and_process_sheet(4)
 
-for (i in 5:which(excel_sheets(file_path) == "tmofAE")) {
-  cnc_data <- read_excel(file_path, sheet = i, skip = 5)
-
-cnc_data_long <-  cnc_data |>
-  select(-colnames(cnc_data)[2]) |>
-  rename(departement_code = colnames(cnc_data)[1]) |>
-  pivot_longer(
-    cols = -departement_code,
-    names_to = "year", 
-    values_to = excel_sheets(file_path)[i]
-    )
-
-cnc_data_merge <- left_join(cnc_data_merge, cnc_data_long, by = c("departement_code", "year"))
+for (i in seq(from = 5, to = which(excel_sheets(file_path) == "tmofAE"))) {
+  cnc_data_merge <- left_join(cnc_data_merge, read_and_process_sheet(i),
+                              by = c("departement_code", "year"))
 }
 ```
 
@@ -176,7 +167,7 @@ summary_table <- Insee_cleanv3 %>%
 knitr::kable(summary_table, caption = "Description of the Insee_cleanv3 database", format = "html", align='c')
 ```
 
-</center>
+<center>
 
 #### Description of the variables
 
@@ -227,5 +218,8 @@ data_clean <- data_merge |>
 ```
 
 ```{r}
-data_clean |> group_by(year) |>  summarise(across(everything(), ~sum(is.na(.)), .names = "missing_{.col}"))
+data_clean |> group_by(year) |>  summarise(across(everything(), ~sum(is.na(.)), .names = "missing_{.col}")) 
+
+
+data_clean |> group_by(year) |>  summarise(nb_value = n())
 ```
