--- a/Code_project.qmd
+++ b/Code_project.qmd
@@ -7,7 +7,9 @@ output:
 editor: visual
 ---
 
-<br> <br>
+<br>
+
+<br>
 
 <center>
 
@@ -39,13 +41,13 @@ This project is powered by two databases :
 
 <br>
 
-### "Exploitation - data by departement"
+### "***Exploitation - data by departement***"
 
 *Original french name : "**Exploitation - données par département**"*
 
 The first database was created by the French National Center for Cinema and the Moving Image, most commonly known as CNC. CNC is an agency of the French Ministry of Culture. Its role is to implement the state's policy on the question of cinema, audiovisual and multimedia. It is notably in charge of the regulation, promotion and distribution of french movies. The French agency also collects data regarding its purview and proposes part of them in open data.
 
-The database "Exploitation - data by department" is one of the aforementioned opan data. It is a statistical monitoring on the evolution of french cinema theater and its attendance between 1966 and 2022. It notably contains data on the number of venues, their characteristics (e.g. number of screens, seating capacity, ...); but also on the number of sold tickets and gained revenues. As its name indicates, french departments (according to their 2021 administrative division) are the statistical unit of the base. The database were constructed by using two main sources :
+The database "Exploitation - data by department" is one of the aforementioned open data. It is a statistical monitoring on the evolution of french cinema theater and its attendance between 1966 and 2022. It notably contains data on the number of venues, their characteristics (e.g. number of screens, seating capacity, ...); but also on the number of sold tickets and gained revenues. As its name indicates, french departments (according to their 2021 administrative division) are the statistical unit of the base. The database were constructed by using two main sources :
 
 -   the **list of cinemas** authorized by the agency
 
@@ -57,7 +59,7 @@ The database "Exploitation - data by department" is one of the aforementioned op
 
 *Original title : Données harmonisées des recensements de la population à partir de 1968*
 
-The second database was produced by Insee, the french National Institute of Statistics and Economic Studies. Insee is French national bureau and one of its bigger data provider. The data that will be used for its project has for sources demographic information which come frome the different population censuses between 1968 and 2019.
+The second database was produced by Insee, the french National Institute of Statistics and Economic Studies. Insee is French national bureau and one of its bigger data provider. The data that will be used for its project has for sources demographic information which come from the different population censuses between 1968 and 2019.
 
 ```{r Summary_of_the_last_census, echo=FALSE, message = FALSE}
 list_of_census <- data.frame(census = paste0("n°", 1:8),year=c(1968,1975,1982,1990,1999,2008,2013,2019))
@@ -67,7 +69,7 @@ list_of_census<- list_of_census |>  pivot_wider(names_from="census",values_from 
 list_of_census |> knitr::kable(caption ="French census between 1968 and 2019", format="html", align='c')
 ```
 
-Censuses are one of the most important data collections taking place in France. Answering their survey is an obligation for all inhabitants under penalty of a fine (article 3 of the Law n°51-711 of 7 June 1951). Historically, population censuses took the form of an exhaustive collect of all French townships during asame year. However, the collection method evolved in 2002. Nowadays, Insee uses a rotational approach. For townships of at least 10 000 inhabitants, 8% of the housing of are interviewed each year. The goal is then to cover 40% of their population over a 5-year period. This 5-year moving sample is then used to estimate demographic data annually. For townships withless of 10 000 inhabitants, the collection is still exhaustive but is not simultaneous. Indeed, it occurs in a fifth of towns each year ensuring that all townships are censused every 5 years. Demographic information between 2 collection is then estimated using data from the nearest one.
+Censuses are one of the most important data collections taking place in France. Answering their survey is an obligation for all inhabitants under penalty of a fine (article 3 of the Law n°51-711 of 7 June 1951). Historically, population censuses took the form of an exhaustive collect of all French townships during a same year. However, the collection method evolved in 2002. Nowadays, Insee uses a rotational approach. For townships of at least 10 000 inhabitants, 8% of the housing of are interviewed each year. The goal is then to cover 40% of their population over a 5-year period. This 5-year moving sample is then used to estimate demographic data annually. For townships withless of 10 000 inhabitants, the collection is still exhaustive but is not simultaneous. Indeed, it occurs in a fifth of towns each year ensuring that all townships are censused every 5 years. Demographic information between 2 collection is then estimated using data from the nearest one.
 
 The data is collected by face-to-face interviews or-since 2015- via internet surveys.
 
@@ -239,4 +241,18 @@ data_clean |> group_by(year) |>  summarise(nb_value = n())
 
 ## Research question
 
-The main question we aim to answer in this paper is : **"How has the cinema landscape evolved over the last 50 years in France, and what role do sociodemographic factors play in these changes?"**
+The central inquiry driving our investigation is as follows: **"How has the cinematic landscape in France evolved over the past five decades, and what role have sociodemographic factors played in shaping these transformations?"**
+
+Our study is poised to delve into this question with a myriad of variables at our disposal, collectively weaving a rich tapestry of insights. The research question gains significance through the exploration of the following key aspects:
+
+**Demographic Dynamics and Cinematic Choices:** The inclusion of variables from the INSEE database, such as department of residence (DEP_RES_21), age groups (AGE_GROUP), and socio-professional categories (CSP), enables us to discern correlations between demographic shifts and the cinematic preferences of distinct population segments. This facet unveils how societal changes influence and are influenced by the cinematic landscape.
+
+**Economic Health of the Industry:** Variables such as the number of tickets bought (entrées), total revenue (recettes), and average revenue per bought ticket (RME) serve as pivotal metrics for gauging the economic vitality of the cinema industry. Understanding these economic aspects is crucial for deciphering the financial sustainability and success of the film sector.
+
+**Cultural Diversity through Arthouse Cinemas:** The representation of Arthouse cinemas in our dataset unveils the emergence of a distinctive cultural niche. Examining the growth and audience engagement of these cinemas provides valuable insights into the demand for culturally diverse and intellectually stimulating cinematic content.
+
+**Structural Shifts with Multiplexes:** The variable "multiplexes" signifies a structural transformation in how cinemas are conceived and experienced. Investigating the ascendancy and impact of multiplexes sheds light on societal preferences, emphasizing convenience and a simultaneous offering of diverse films.
+
+**Societal Interaction through Occupancy Rates:** The occupancy rate of seats (Taux d'occupation des fauteuils) stands as a unique metric that extends beyond mere film popularity. It mirrors societal dynamics associated with communal entertainment experiences. This metric unveils the social aspects of cinema-going, providing a holistic perspective that goes beyond conventional economic indicators.
+
+In essence, our exploration is poised to uncover the intricate interplay between cinematic evolution and sociodemographic factors, shedding light on the multifaceted nature of this dynamic relationship over the past 50 years in France.
